--- a/template/web/index.html
+++ b/template/web/index.html
@@ -37,7 +37,7 @@
      
         </div>
 <!-- book now -->
-<jcms:module:booking_undergallery/>
+<jcms:module:booking_undergallery />
 <!-- book now end -->
     </section>
     <!-- END / SLIDER -->
@@ -63,7 +63,79 @@
     <!-- END / ROOMS -->
 
     <!-- staycation -->
-    <jcms:module:homeoffers-list/>
+    <jcms:module:homeoffers-list />
+    <section class="hotel-amenities container">
+        <div class="row">
+            <div class="col-lg-8">
+                <div class="amenities-container">
+                <p>Elevate Your Stay</p>
+                <h2>Unveiling our Amenities</h2>
+                    <div class="all-amenities">
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="./images/icons/parking.png" alt="parking">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Free Parking</h4>
+                                <p>Park with peace of mind</p>
+                            </div>
+                        </div>
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="./images/icons/wifi.webp" alt="wifi">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Free wifi</h4>
+                                <p>Stay connected effortlessly.</p>
+                            </div>
+                        </div>
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="../../images/services/TqbVF-002-bus.png" alt="shuttle service">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Shuttle Service</h4>
+                                <p>Easy pick and drop</p>
+                            </div>
+                        </div>
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="./images/icons/parking.png" alt="parking">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Free Parking</h4>
+                                <p>Park with peace of mind</p>
+                            </div>
+                        </div>
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="./images/icons/wifi.webp" alt="wifi">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Free wifi</h4>
+                                <p>Stay connected effortlessly.</p>
+                            </div>
+                        </div>
+                        <div class="amenity">
+                            <div class="amenities-icon">
+                                <img src="../../images/services/TqbVF-002-bus.png" alt="shuttle service">
+                            </div>
+                            <div class="amenities-text">
+                                <h4>Shuttle Service</h4>
+                                <p>Easy pick and drop</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="amenities-outlined-div"></div>
+                <div class="amenities-side-image">
+                    <img src="./images/bbq.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- staycation end -->
           <!--OUR-EVENTS-->
     <jcms:module:list-high-room/>
