--- a/template/web/index.html
+++ b/template/web/index.html
@@ -32,7 +32,7 @@
 
     <!-- SLIDER -->
     <section class="section-slider height-v">
-        <div id="index12" class="owl-carousel  owl-theme">
+        <div id="index12" class="owl-carousel owl-theme">
             <jcms:module:slideshow/>
      
         </div>
@@ -68,8 +68,9 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="amenities-container">
-                <p>Elevate Your Stay</p>
-                <h2>Unveiling our Amenities</h2>
+                    <p>Elevate Your Stay</p>
+                    <h2>Unveiling our Amenities</h2>
+                    <div class="line"></div>
                     <div class="all-amenities">
                         <div class="amenity">
                             <div class="amenities-icon">
@@ -128,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4 position-relative">
                 <div class="amenities-outlined-div"></div>
                 <div class="amenities-side-image">
                     <img src="./images/bbq.jpg" alt="">
@@ -144,7 +145,7 @@
 
 
     <!-- BEST -->
-    <section class="best">
+    <!-- <section class="best">
         <div class="container">
             <h2 class="our_services">Our Services</h2>
             <div class="line"></div>
@@ -153,10 +154,15 @@
                 <jcms:module:facility-list-home/>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- END / BEST -->
          <!-- OUR-GALLERY-->
-    <section class="gallery-our">
+
+          <!-- TESTIMONOALS -->
+   <jcms:module:testimonial-title/>
+
+
+    <!-- <section class="gallery-our">
         <div class="container-fluid">
             <div class="gallery">
                 <h2 class="title-gallery">Our Gallery</h2>
@@ -168,15 +174,17 @@
                 <div class="tab-content">
                     <jcms:module:galleryHome/>
                 </div>
-            </div>
+            </div> -->
             <!-- /gallery -->
-        </div>
+        <!-- </div> -->
         <!-- /container -->
-    </section>
+    <!-- </section> -->
     <!-- END / OUR GALLERY -->
+
          <!-- nearby location -->
-     <section class="near__by_location events events-v2 owl_carousel_nav">
+    <section class="near__by_location events events-v2 owl_carousel_nav">
         <div class="container">
+            <p class="about-sub-title">Lorem ipsum dolor sit.</p>
             <h2 class="events-title">Nearby Location</h2>
             <div class="line-v2"></div>
             <div id="events-v2" class="owl-carousel owl-theme owl_content_display">
@@ -185,10 +193,44 @@
         </div>
     </section>
      <!-- nearby location end -->
-
-    <!-- TESTIMONOALS -->
-   <jcms:module:testimonial-title/>
    
+    <section class="home-gallery-carousel">
+        <div class="gallery-carousel-title container">
+            <p>Lorem ipsum dolor sit.</p>
+            <h3>Gallery</h3>
+            <div class="line"></div>
+        </div>
+        <div class="container-fluid">
+            <div id="galImagesCarousel" class="owl-carousel home-gal">
+                <div class="item">
+                    <div class="gall-image">
+                        <img src="./images/diningbanner.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="gall-image">
+                        <img src="./images/diningbanner.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="gall-image">
+                        <img src="./images/diningbanner.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="gall-image">
+                        <img src="./images/diningbanner.jpg" alt="">
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="gall-image">
+                        <img src="./images/diningbanner.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- END / OUR EVENTS -->
           <!-- ota -->
           <section class="ota_group">
